tests/fixtures/bad/unreachable.maze
name:       maze.bad.name
theme:      nature
size:       5x5
start:      1,1
time_start: 08:00

tiles:
GGGGG
G...G
GGGGG
G...G
GGGGG

entities:
pickup#unreachable.seed 2 3 item:seed
